--- a/app/static/index.html
+++ b/app/static/index.html
@@ -53,7 +53,7 @@
                             Remember me
                         </label>
                         <div x-show="loginError" class="text-red-400 text-sm mb-3" x-text="loginError" data-testid="error"></div>
-                        <button type="submit"
+                        <button type="submit" data-testid="login-btn"
                                 class="w-full bg-blue-600 hover:bg-blue-700 text-white font-semibold py-2 px-4 rounded transition-colors">
                             Login
                         </button>
