--- a/app/static/index.html
+++ b/app/static/index.html
@@ -329,6 +329,15 @@
                     <button @click="setAdminTab('activity')" data-testid="tab-activity"
                             :class="adminTab === 'activity' ? 'border-b-2 border-blue-500 text-blue-400' : 'text-gray-400'"
                             class="px-4 py-2 -mb-px">Activity</button>
+                    <button @click="setAdminTab('infra')" data-testid="tab-infra"
+                            :class="adminTab === 'infra' ? 'border-b-2 border-blue-500 text-blue-400' : 'text-gray-400'"
+                            class="px-4 py-2 -mb-px relative">
+                        Infra
+                        <span x-show="infraHealth?.summary?.warning > 0 || infraHealth?.summary?.critical > 0"
+                              class="absolute -top-1 -right-1 text-xs rounded-full w-5 h-5 flex items-center justify-center"
+                              :class="infraHealth?.summary?.critical > 0 ? 'bg-red-500' : 'bg-yellow-500'"
+                              x-text="(infraHealth?.summary?.warning || 0) + (infraHealth?.summary?.critical || 0)"></span>
+                    </button>
                 </div>
 
                 <!-- FRIENDS TAB -->
@@ -572,6 +581,98 @@
                         <template x-if="activityLog.length === 0">
                             <div class="text-gray-500 text-center py-8">No activity recorded yet</div>
                         </template>
+                    </div>
+                </div>
+
+                <!-- INFRA TAB -->
+                <div x-show="adminTab === 'infra'" data-testid="infra-panel">
+                    <!-- Summary Cards -->
+                    <div class="grid grid-cols-2 md:grid-cols-4 gap-4 mb-6">
+                        <div class="bg-gray-800 rounded-lg p-4 text-center">
+                            <div class="text-3xl font-bold text-green-400" x-text="infraHealth?.summary?.ok || 0"></div>
+                            <div class="text-sm text-gray-400">OK</div>
+                        </div>
+                        <div class="bg-gray-800 rounded-lg p-4 text-center">
+                            <div class="text-3xl font-bold text-blue-400" x-text="infraHealth?.summary?.info || 0"></div>
+                            <div class="text-sm text-gray-400">Info</div>
+                        </div>
+                        <div class="bg-gray-800 rounded-lg p-4 text-center">
+                            <div class="text-3xl font-bold text-yellow-400" x-text="infraHealth?.summary?.warning || 0"></div>
+                            <div class="text-sm text-gray-400">Warning</div>
+                        </div>
+                        <div class="bg-gray-800 rounded-lg p-4 text-center">
+                            <div class="text-3xl font-bold text-red-400" x-text="infraHealth?.summary?.critical || 0"></div>
+                            <div class="text-sm text-gray-400">Critical</div>
+                        </div>
+                    </div>
+
+                    <!-- Infrastructure Checks -->
+                    <div class="mb-6">
+                        <h3 class="text-lg font-semibold text-gray-300 mb-3">Infrastructure</h3>
+                        <div class="bg-gray-800 rounded-lg divide-y divide-gray-700">
+                            <template x-for="result in infraHealth?.infra || []" :key="result.check_id">
+                                <div class="px-4 py-3 flex items-center justify-between">
+                                    <div class="flex items-center gap-3">
+                                        <span :class="{
+                                            'text-green-400': result.severity === 'ok',
+                                            'text-blue-400': result.severity === 'info',
+                                            'text-yellow-400': result.severity === 'warning',
+                                            'text-red-400': result.severity === 'critical'
+                                        }" x-text="result.severity === 'ok' ? '✓' : result.severity === 'warning' ? '⚠' : result.severity === 'critical' ? '✗' : 'ℹ'"></span>
+                                        <span class="font-medium" x-text="result.name"></span>
+                                    </div>
+                                    <span class="text-sm text-gray-400" x-text="result.message"></span>
+                                </div>
+                            </template>
+                        </div>
+                    </div>
+
+                    <!-- Container Checks -->
+                    <div>
+                        <h3 class="text-lg font-semibold text-gray-300 mb-3">Containers</h3>
+                        <div class="space-y-2">
+                            <template x-for="(checks, container) in infraHealth?.containers || {}" :key="container">
+                                <div class="bg-gray-800 rounded-lg overflow-hidden">
+                                    <button @click="expandedInfra[container] = !expandedInfra[container]"
+                                            class="w-full px-4 py-3 flex items-center justify-between hover:bg-gray-750 transition-colors">
+                                        <div class="flex items-center gap-3">
+                                            <span x-text="expandedInfra[container] ? '▼' : '▶'" class="text-gray-400 text-sm"></span>
+                                            <span class="font-medium" x-text="container"></span>
+                                            <!-- Issue count badge -->
+                                            <span x-show="getContainerIssueCount(checks) > 0"
+                                                  class="text-xs px-2 py-0.5 rounded"
+                                                  :class="hasContainerCritical(checks) ? 'bg-red-500' : 'bg-yellow-500'"
+                                                  x-text="getContainerIssueCount(checks) + ' issue' + (getContainerIssueCount(checks) > 1 ? 's' : '')"></span>
+                                        </div>
+                                        <span class="text-sm text-gray-500" x-text="checks.length + ' checks'"></span>
+                                    </button>
+                                    <div x-show="expandedInfra[container]" class="px-4 pb-3 border-t border-gray-700">
+                                        <template x-for="check in checks" :key="check.check_id">
+                                            <div class="py-2 flex items-center justify-between text-sm">
+                                                <div class="flex items-center gap-2">
+                                                    <span :class="{
+                                                        'text-green-400': check.severity === 'ok',
+                                                        'text-blue-400': check.severity === 'info',
+                                                        'text-yellow-400': check.severity === 'warning',
+                                                        'text-red-400': check.severity === 'critical'
+                                                    }" x-text="check.severity === 'ok' ? '✓' : check.severity === 'warning' ? '⚠' : check.severity === 'critical' ? '✗' : 'ℹ'"></span>
+                                                    <span x-text="check.name.replace('Security: ' + container, '').replace('Logs: ' + container, '') || check.name"></span>
+                                                </div>
+                                                <span class="text-gray-400" x-text="check.message"></span>
+                                            </div>
+                                        </template>
+                                    </div>
+                                </div>
+                            </template>
+                        </div>
+                    </div>
+
+                    <!-- Refresh button -->
+                    <div class="mt-6 text-center">
+                        <button @click="refreshInfraHealth"
+                                class="bg-blue-600 hover:bg-blue-700 text-white text-sm px-4 py-2 rounded transition-colors">
+                            Refresh Health Checks
+                        </button>
                     </div>
                 </div>
 
@@ -826,6 +927,8 @@
                 nextcloudStatus: { connected: false, error: '' },
                 overseerrStatus: { connected: false, error: '' },
                 jitsiParticipants: 0,
+                infraHealth: null,
+                expandedInfra: {},
                 editingServiceId: null,
                 editingDescription: '',
                 editingNameId: null,
@@ -1012,6 +1115,9 @@
                         case 'jitsi_update':
                             this.jitsiParticipants = msg.participants;
                             break;
+                        case 'infra_health':
+                            this.infraHealth = msg;
+                            break;
                         case 'activity':
                             // Prepend new activity to the log
                             if (this.activityLog) {
@@ -1102,6 +1208,26 @@
                         'credential_view': 'viewed credentials for'
                     };
                     return verbs[action] || action;
+                },
+
+                // Infra health helpers
+                getContainerIssueCount(checks) {
+                    return checks.filter(c => c.severity === 'warning' || c.severity === 'critical').length;
+                },
+
+                hasContainerCritical(checks) {
+                    return checks.some(c => c.severity === 'critical');
+                },
+
+                async refreshInfraHealth() {
+                    try {
+                        const resp = await fetch('/api/health/refresh', { method: 'POST' });
+                        if (resp.ok) {
+                            this.infraHealth = await resp.json();
+                        }
+                    } catch (e) {
+                        console.error('Failed to refresh infra health:', e);
+                    }
                 },
 
                 async checkAllStatus() {
